2009-03-18  Les Harris  <lharris@gnome.org>

	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Checks for subwindow
	visiblity before attempting to show it, updates old-width/old-height
	before resizing. This prevents spurious subwindow.size's being sent to
	the server as the terminal gets it's act together.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor): MudSubwindows no
	longer appear in the taskbar or pager. Additionally, they are set
	transient for the main window so when it is minimized they dissapear
	too.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_size_allocate_cb): Wrapped in a
	GTK_WIDGET_MAPPED block so we don't send irrelevant values.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c: Connected to size-allocate to send the resized
	signal. This ensures the terminal is properly sized. Added old-width
	and old-height properties.
	* src/mud-window.c: Changed to size-allocate for the resized signal as
	in mud-subwindow.c. This fixes gnome-mud sending stale naws values.
	* src/zmp/zmp-subwindow.c: Now checks against MudSubwindows old-width
	and old-height values to ensure subwindow.size is only sent once at
	the proper times.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_constructor): Sets the window
	width and height again after the profile read as it might have
	changed.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Now explicity sends
	the window size rather than relying on the callback on window open.

2009-03-18  Les Harris  <lharris@gnome.org>

	* src/mud-subwindow.c (mud_subwindow_set_property),
	(mud_subwindow_set_terminal_font): Removed debug logging. Now updates
	VTE grid when font is changed.
	* src/zmp/zmp-subwindow.c (zmp_subwindow_open): Now displays the
	window before attempting to resize.  This allows the vte terminal to
	resize properly.

2009-03-17  Les Harris  <lharris@gnome.org>
