@@ -76,6 +76,7 @@ static void zmp_subwindow_register_commands(MudTelnetZmp *zmp);
 static void zmp_subwindow_open(MudTelnetZmp *self, gint argc, gchar **argv);
 static void zmp_subwindow_close(MudTelnetZmp *self, gint argc, gchar **argv);
 static void zmp_subwindow_select(MudTelnetZmp *self, gint argc, gchar **argv);
+static void zmp_subwindow_set_input(MudTelnetZmp *self, gint argc, gchar **argv);
 static void zmp_subwindow_do_input(MudSubwindow *sub,
                                    const gchar *input,
                                    ZmpSubwindow *self);
@@ -239,15 +240,16 @@ zmp_subwindow_register_commands(MudTelnetZmp *zmp)
     mud_zmp_register(zmp, mud_zmp_new_command("subwindow.",
                                               "subwindow.select",
                                               zmp_subwindow_select));
+    mud_zmp_register(zmp, mud_zmp_new_command("subwindow.",
+                                              "subwindow.set-input",
+                                              zmp_subwindow_set_input));
 
     /* If the server sends us these, its a broken server.
      * We send these commands to the server. */
     mud_zmp_register(zmp, mud_zmp_new_command("subwindow.",
                                               "subwindow.size",
                                               NULL));
-    mud_zmp_register(zmp, mud_zmp_new_command("subwindow.",
-                                              "subwindow.set-input",
-                                              NULL));
+
 }
 
 /* ZmpSubwindow Commands */
@@ -361,29 +363,41 @@ zmp_subwindow_select(MudTelnetZmp *self,
 }
 
 static void
+zmp_subwindow_set_input(MudTelnetZmp *self,
+                        gint argc,
+                        gchar **argv)
+{
+    MudConnectionView *view;
+    MudTelnet *telnet;
+    ZmpMain *zmp_main;
+    guint enable;
+
+    if(argc != 3)
+        return;
+
+    g_object_get(self, "telnet", &telnet, NULL);
+    g_object_get(telnet, "parent-view", &view, NULL);
+
+    enable = (guint)atol(argv[2]);
+
+    mud_connection_view_enable_subwindow_input(view,
+                                               argv[1],
+                                               enable);
+
+}
+
+static void
 zmp_subwindow_do_input(MudSubwindow *sub,
                        const gchar *input,
                        ZmpSubwindow *self)
 {
     MudConnectionView *view;
-    gchar *identifier;
 
     g_object_get(sub,
-                 "identifier", &identifier,
                  "parent-view", &view,
                  NULL);
 
-    mud_zmp_send_command(self->priv->parent, 2,
-                         "subwindow.set-input",
-                         identifier);
-
     mud_connection_view_send(view, input);
-
-    mud_zmp_send_command(self->priv->parent, 2,
-                         "subwindow.set-input",
-                         "main");
-
-    g_free(identifier);
 }
 
 static void
